# memiys_bot

./: .gitignore  .replit  README.md  bot.js  bot.js.js  generate_prediction.py  index.js  package-lock.json  package.json  pyproject.toml  replit.nix
memes_vibe/: video--cue { color- white; font-family- -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen-Sans, 'Apple Color Emoj.url
